# chunked_widget_to_image

./: CHANGELOG.md  DESCRIPTION.md  README.md  README_ZH.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/bg1998/chunked_widget_to_image_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: build.sh  chunked_widget_to_image.podspec
ios/chunked_widget_to_image.framework/: Info.plist  chunked_widget_to_image
ios/chunked_widget_to_image.framework/_CodeSignature/: CodeResources
lib/: chunked_widget_to_image.dart
lib/src/: chunked_widget_to_image_bindings.dart  chunked_widget_to_image_bindings_generated.dart  chunked_widget_to_image_controller.dart  enum_image_format.dart  render_repaint_boundary_ext.dart
linux/: CMakeLists.txt
macos/: build.sh  chunked_widget_to_image.podspec
macos/chunked_widget_to_image.framework/: chunked_widget_to_image
macos/chunked_widget_to_image.framework/Versions/Current/: chunked_widget_to_image
macos/chunked_widget_to_image.framework/Versions/Current/Resources/: Info.plist
src/: CMakeLists.txt  chunked_widget_to_image.c  chunked_widget_to_image.h  libyuv_bridge.cpp  widget_jpeg.c  widget_jpeg.h  widget_png.c  widget_png.h
windows/: CMakeLists.txt
